added state to update name on card click and fine tuned profiles

--- a/client/src/Components/CharacterCard/CharacterCard.module.css
+++ b/client/src/Components/CharacterCard/CharacterCard.module.css
@@ -1,25 +1,24 @@
 * {
     box-sizing: border-box;
-}
-
-body {
+  }
+  
+  body {
     padding: 0;
     margin: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: #fff;
-}
+    font-weight: 600;
 
-.cardContainer {
-    /* width: 1000px; */
-    overflow-x: scroll;
+  }
+  
+  .cardContainer {
     display: flex;
     background-color: #100e17;
-    padding: 3rem;
-}
-
-.card {
-    min-width: 300px;
-    /* height: 350px; */
+    padding: 1rem;
+  }
+  
+  .card {
+    min-width: 250px;
     border-radius: 16px;
     background-color: #17141d;
     box-shadow: -1rem 0 3rem #000;
@@ -27,59 +26,70 @@ body {
     flex-direction: column;
     padding: 1.5rem;
     transition: 0.2s;
-}
-
-.date {
-    color: #8a8a8a;
-}
-
-.tags {
+    border-color: color;
+  }
+  
+  .tags {
     display: flex;
     flex-wrap: wrap;
-    margin: 1rem 0 1rem;
-}
-
-.tags div {
+    margin: auto;
+    margin-top: 1rem;
+  }
+  
+  .tags div {
     font-size: 9px;
     font-weight: 700;
     padding: 4px 10px;
     border: 3px solid #28242f;
     border-radius: 2rem;
-}
-
-.card .category-title {
+  }
+  
+  .card .category-title {
     font-size: 14px;
     color: #fff;
     margin-bottom: 1rem;
-}
-
-.card .articleTitle {
+  }
+  
+  .card .articleTitle {
     font-size: 20px;
     font-weight: 700;
-}
-
-.card .articleHeader {
+    color: #07afc6;
+    
+  }
+  
+  .card .articleHeader {
     margin-bottom: auto;
-}
-
-.card .author {
-    margin-top: 3rem;
-    display: grid;
-    grid-template-columns: 75px 1fr;
-}
-
-.author .info .caption {
-    color: #8a8a8a;
-}
-
-.card:not(:first-child) {
+    margin: auto;
+    width: 100%;
+    text-align: center;
+  }
+  
+  .card .imageLayout {
+    margin: auto;
+  }
+  
+  .card .image {
+    margin-bottom: 1rem;
+    margin-top: 1rem;  
+  }
+  
+  .card img {
+    border-radius: 10px;
+    border: 3px solid rgb(212, 211, 211);
+  }
+  
+  .card .name {
+    color: #cbd349;
+  }
+  
+  .card:not(:first-child) {
     margin-left: -130px;
-}
-
-.card:hover {
+  }
+  
+  .card:hover {
     transform: translateY(-1rem);
-}
-
-.card:hover~.card{
+  }
+  
+  .card:hover ~ .card {
     transform: translateX(130px);
-}
+  }
