--- a/client/src/Components/Footer/Footer.module.css
+++ b/client/src/Components/Footer/Footer.module.css
@@ -2,6 +2,17 @@
   color: rgb(146, 145, 145);
   text-align: center;
   margin: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.paginationTxt {
+    color: rgb(214, 214, 16);
+}
+
+.paginationBtns button {
+    margin: .5rem;
 }
 
 a {
